Fixed overlapping classes in style.css for index page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,221 +1,165 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  line-height: 30px;
+  color: #777777;
+  background-image: url("../images/concrete_seamless.png");
+}
+
+/* ----- HEADER ----- */
+header {
+  background-color: #ffffff;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  border-bottom: 2px solid #dddddd;
+}
+
+h1 {
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
+  color: #ffffff;
+  background-color: #4aaaa5;
+  /* padding: 10px 10px; */
+}
+
+/* ----- NAV BAR -----  */
+.nav a {
+  font-size: 16px;
+  color: #777777;
+  text-decoration: none;
+  border-left: 1px solid #efefef;
+  padding-left: 30px;
+}
+
+main {
+  width: 960px;
+  background-color: white;
+  border: 1px solid #dddddd;
+  position: relative;
+  top: 70px;
+  font-size: 14px;
+  /* line-height: 22px; */
+}
+
+#photo {
+  float: left;
+  padding: 10px;
+}
+
+h2 {
+  color: #4aaaa5;
+  padding: 30px 0 10px 10px;
+  margin-bottom: 10px;
+  border-bottom: 2px solid #dddddd;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "Georgia", Times, Times New Roman, serif;
+}
+
+/* ----- FOOTER ----- */
+footer {
+  border-top: 3px solid #4aaaa5;
+  width: 100%;
+  bottom: 0px;
+  position: fixed;
+  background-color: #666666;
+  height: 60px;
+}
+
+footer p {
+  color: #ffffff;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 14px;
+  position: relative;
+  top: 15px;
   }
-  
-  body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    line-height: 30px;
-    color: #777777;
-  }
-  
-  /* HEADER */
-  
-  header {
-    background-color: #ffffff;
-  }
-  
-  .wrapper {
-    width: 960px;
-    margin: 0 auto;
-  }
-  
-  .banner {
-    width: 960px;
-    margin: 0 auto;
-    font-family: "Georgia", Times, Times New Roman, serif;
-  }
-  
-  #nameLogo {
-    float: left;
-    text-align: center;
-    color: #ffffff;
-    background-color: #4aaaa5;
-    padding: 20px 20px;
-  }
-  
-  h1 {
-    font-size: 25px;
-    font-weight: bold;
-  }
-  
-  /* NAV BAR */
-  
-  nav {
-    float: right;
-  }
-  
-  /* Set margins and get rid of the bullets. (See notes in HTML for code reference) */
-  nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  /* Put specified space between the listed items in nav list. (See notes in HTML for code reference) */
-  nav li {
-    display: inline-block;
-    margin-left: 25px;
-    padding-top: 25px;
-  }
-  
-  /* Get rid of the underscores for the nav list. (See notes in HTML for code reference) */
-  nav a {
-    font-size: 16px;
-    color: #777777;
-    text-decoration: none;
-    border-left: 1px solid #efefef;
-    padding-left: 30px;
-  }
-  
-  /* Add a hover over the navigation items */
-  nav a:hover {
-    color: #cccccc;
-  }
-  
-  .container {
-    background-image: url("../images/concrete_seamless.png");
-    border-top: 2px solid#dddddd;
-    height: 1500px;
-    margin: 0 auto;
-  }
-  
-  #content {
-    width: 960px;
-    background-color: white;
-    border: 1px solid #dddddd;
-    padding: 20px 30px;
-    position: relative;
-    top: 100px;
-    font-size: 14px;
-    line-height: 22px;
-  }
-  
-  #photo {
-    float: left;
-    padding: 10px;
-  }
-  
-  h2 {
-    color: #4aaaa5;
-    padding: 50px 0 25px 0;
-    margin-bottom: 10px;
-    border-bottom: 2px solid #dddddd;
-    font-size: 25px;
-    font-weight: bold;
-    font-family: "Georgia", Times, Times New Roman, serif;
-  }
-  
-  p {
-    padding-top: 12px;
-  }
-  
-  .clearfix {
-    clear: both;
-  }
-  
-  /* FOOTER */
-  
-  footer {
-    border-top: 3px solid #4aaaa5;
-    width: 100%;
-    bottom: 0px;
-    position: fixed;
-    text-align: center;
-    color: #ffffff;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px;
-    background-color: #666666;
-    height: 60px;
-  }
-  
-  /* main section (for Portfolio and Contact pages) */
-  
-  .main-section {
-    /* float: left; */
-    width: 100%;
-    max-width: 960px;
-    height: auto;
-    padding: 30px;
-    margin: 100px 0 130px;
-    background: #ffffff;
-    border: 1px solid #dddddd;
-    position: relative;
-  }
-  
-  /* PORTFOLIO PAGE */
-  
-  .work {
-    position: relative;
-    float: left;
-    width: 274px;
-    margin: 20px 0 25px;
-    overflow: auto;
-  }
-  
-  .work:nth-child(even) {
-    margin-right: 50px;
-  }
-  
-  .work img {
-    width: 185px;
-    height: 140px;
-    border: 0 none;
-    opacity: 0.8;
-  }
-  
-  .work h3 {
-    position: absolute;
-    bottom: 20px;
-    width: 185px;
-    padding: 8px;
-    margin-bottom: 0;
-    /* font-weight: 300; */
-    /* line-height: 30px; */
-    color: #ffffff;
-    font-family: Georgia, Times, "Times New Roman", serif;
-    text-align: center;
-    background: #4aaaa5;
-    /* border-bottom: 0; */
-  }
-  
-  /* CONTACT PAGE */
-  
-  #contact-form ul {
-    margin-bottom: 20px;
-  }
-  
-  #contact-form li {
-    margin-bottom: 10px;
-  }
-  
-  label,
-  input[type="text"],
-  input[type="email"],
-  textarea {
-    display: block;
-    width: 100%;
-    margin-top: 10px;
-  }
-  
-  input[type="text"],
-  input[type="email"],
-  textarea {
-    height: 35px;
-    padding: 0 10px;
-    font-size: 12px;
-    /* color: red; */
-    border: 1px solid #dddddd;
-  }
-  
-  textarea {
-    height: 200px;
-  }
-  
-  input[type="submit"] {
-    padding: 10px 30px;
-    font-size: 18px;
-    color: #ffffff;
-    cursor: pointer;
-    background: #4aaaa5;
-    border: 0 none;
-  }
+
+/* main section (for Portfolio and Contact pages) */
+
+.main-section {
+  width: 100%;
+  max-width: 960px;
+  height: 720px;
+  padding: 30px;
+  margin: 100px 0 130px;
+  background: #ffffff;
+  border: 1px solid #dddddd;
+  position: relative;
+}
+
+/* ----- PORTFOLIO PAGE ----- */
+
+/* .work { */
+  /* position: relative; */
+  /* float: left; */
+  /* width: 274px; */
+  /* margin: 20px 0 25px; */
+  /* overflow: auto; */
+/* } */
+
+/* .card:nth-child(even) { */
+  /* margin-right: 50px; */
+/* } */
+
+.card img {
+  width: 200px;
+  height: 160px;
+  border: 1px solid #dddddd;
+  opacity: 0.8;
+}
+
+.card h5 {
+  position: absolute;
+  bottom: 20px;
+  width: 185px;
+  padding: 8px;
+  margin-bottom: 0;
+  color: #ffffff;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  text-align: center;
+  background: #4aaaa5;
+}
+
+/* CONTACT PAGE */
+
+#contact-form ul {
+  margin-bottom: 20px;
+}
+
+#contact-form li {
+  margin-bottom: 10px;
+}
+
+label,
+input[type="text"],
+input[type="email"],
+textarea {
+  display: block;
+  width: 100%;
+  margin-top: 10px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  height: 35px;
+  padding: 0 10px;
+  font-size: 12px;
+  /* color: red; */
+  border: 1px solid #dddddd;
+}
+
+textarea {
+  height: 200px;
+}
+
+input[type="submit"] {
+  padding: 10px 30px;
+  font-size: 18px;
+  color: #ffffff;
+  cursor: pointer;
+  background: #4aaaa5;
+  border: 0 none;
+}
